[TB] Gemini: migrate to JSON Schema for everything